--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: taxi_app
-description: اپلیکیشن تاکسی اینترنتی مخصوص افغانستان
-publish_to: 'none' # در صورت انتشار در pub.dev این خط را حذف کنید
+description: اپلیکیشن تاکسی اینترنتی مخصوص افغانستان - سفیر
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
@@ -13,47 +13,34 @@ dependencies:
   # مدیریت حالت
   provider: ^6.0.5
 
-  # نقشه گوگل
+  # نقشه گوگل و مکان‌یابی
   google_maps_flutter: ^2.5.0
-
-  # مکان‌یابی کاربر
   geolocator: ^10.1.0
   geocoding: ^2.1.0
 
-  # درخواست‌ها به سرور
+  # درخواست‌ها به سرور و API
   http: ^1.1.0
 
-  # آیکون‌ها
+  # طراحی و آیکون‌ها
   flutter_svg: ^2.0.9
   cupertino_icons: ^1.0.8
 
-  # فونت فارسی
-  google_fonts: ^6.1.0
-
-  # پرداخت (Stripe بین‌المللی)
+  # پرداخت و لینک‌ها
   flutter_stripe: ^9.4.0
   url_launcher: ^6.2.4
 
-  # ذخیره‌سازی محلی
+  # ذخیره‌سازی و دیتابیس
   shared_preferences: ^2.2.2
-
-  # انیمیشن‌ها
-  animations: ^2.0.8
-
-  # اعتبارسنجی فرم
-  form_field_validator: ^1.1.0
-
-  # Firebase
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
   firebase_storage: ^11.5.6
 
-  # مسیر و انتخاب عکس
+  # ابزارهای جانبی و انیمیشن
+  animations: ^2.0.8
+  form_field_validator: ^1.1.0
   image_picker: ^1.0.4
   path_provider: ^2.1.1
-
-  # رسم مسیر روی نقشه
   flutter_polyline_points: ^2.0.0
   intl: ^0.19.0
 
@@ -65,12 +52,18 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
+  # تعریف پوشه‌های تصاویر و آیکون‌ها
   assets:
     - assets/images/
     - assets/icons/
     - assets/fonts/
 
+  # تنظیمات فونت مدرن ایران‌یکان برای سفیر
   fonts:
-    - family: B_Nazanin
+    - family: IranYekan
       fonts:
-        - asset: assets/fonts/B_Nazanin.ttf
+        - asset: assets/fonts/Qs_Iranyekan.ttf
+        - asset: assets/fonts/Qs_Iranyekan_light.ttf
+          weight: 300
+        - asset: assets/fonts/Qs_Iranyekan_bold.ttf
+          weight: 700
