--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,16 +1,19 @@
 plugins {
     id "com.android.application"
     id "org.jetbrains.kotlin.android"
-    // حتماً این پلاگین فلاتر باشه
+    // اضافه کردن پلاگین گوگل برای اتصال به فایربیس پروژه سفیر
+    id "com.google.gms.google-services"
     id "dev.flutter.flutter-gradle-plugin"
 }
 
 android {
-    namespace "com.example.afghantaxiapp"
+    // تغییر نام فضای نام به سفیر
+    namespace "com.farhad.safir"
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.afghantaxiapp"
+        // تغییر آیدی برنامه برای هماهنگی با فایربیس
+        applicationId "com.farhad.safir"
         minSdk 21
         targetSdk 34
         versionCode 1
@@ -24,8 +27,13 @@ android {
                 getDefaultProguardFile("proguard-android-optimize.txt"),
                 "proguard-rules.pro"
             )
-            // برای تست، امضای دیباگ
             signingConfig signingConfigs.debug
         }
     }
+}
+
+dependencies {
+    // افزودن کتابخانه پایه فایربیس
+    implementation platform('com.google.firebase:firebase-bom:33.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
