--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.afghantaxiapp">
+    package="com.farhad.safir">
 
-    <!-- مجوزهای رایج -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
-        android:label="AfghanTaxiApp"
-        android:icon="@android:drawable/sym_def_app_icon">
+        android:label="سفیر"
+        android:icon="@mipmap/ic_launcher">
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
+            android:theme="@style/LaunchTheme"
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
@@ -22,7 +22,6 @@
             </intent-filter>
         </activity>
 
-        <!-- اجباری برای Embedding v2 -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
