--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,8 @@ rootProject.buildDir = "../build"
 
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
+}
+subprojects {
     project.evaluationDependsOn(":app")
 }
 
