--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,14 @@
 pluginManagement {
+    def flutterSdkPath = {
+        def properties = new Properties()
+        file("local.properties").withInputStream { properties.load(it) }
+        def flutterSdkPath = properties.getProperty("flutter.sdk")
+        assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
+        return flutterSdkPath
+    }()
+
+    includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
+
     repositories {
         google()
         mavenCentral()
@@ -7,19 +17,11 @@ pluginManagement {
 }
 
 plugins {
-    id "com.android.application" version "8.4.2" apply false
-    id "org.jetbrains.kotlin.android" version "1.9.23" apply false
-    // این پلاگین راه Flutter Gradle Plugin رو لود می‌کنه
-    id "dev.flutter.flutter-plugin-loader" version "1.0.0" apply false
+    id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
+    id "com.android.application" version "8.1.0" apply false
+    id "org.jetbrains.kotlin.android" version "1.8.22" apply false
+    // اضافه کردن پلاگین فایربیس در اینجا
+    id "com.google.gms.google-services" version "4.3.15" apply false
 }
 
-dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-
-rootProject.name = "AfghanTaxiApp"
-include(":app")
+include ":app"
