--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,26 +21,26 @@ dependencies:
   google_maps_flutter: ^2.5.3
   geolocator: ^10.1.0
   geocoding: ^2.1.1
-  flutter_polyline_points: ^2.0.0 # برای کشیدن مسیر روی نقشه
+  flutter_polyline_points: ^2.1.0
 
-  # ارتباطات و دیتابیس
-  http: ^1.1.0
-  shared_preferences: ^2.2.2
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  cloud_firestore: ^4.13.6
-  firebase_storage: ^11.5.6
+  # ارتباطات و دیتابیس (بروزرسانی شده برای پروژه سفیر)
+  http: ^1.2.1
+  shared_preferences: ^2.2.3
+  firebase_core: ^3.1.0
+  firebase_auth: ^5.1.0
+  cloud_firestore: ^5.0.0
+  firebase_storage: ^12.0.0
 
   # ابزارهای کاربردی
-  image_picker: ^1.0.7 # اصلاح تکرار: فقط یک بار کافی است
-  url_launcher: ^6.2.4
+  image_picker: ^1.1.2
+  url_launcher: ^6.3.0
   intl: ^0.19.0
-  path_provider: ^2.1.1
+  path_provider: ^2.1.3
   form_field_validator: ^1.1.0
-  animations: ^2.0.8
+  animations: ^2.0.11
 
   # پرداخت (اختیاری برای فازهای بعدی)
-  flutter_stripe: ^9.4.0
+  flutter_stripe: ^10.1.1
 
 dev_dependencies:
   flutter_test:
@@ -50,12 +50,12 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # تعریف پوشه‌ها (پوشه فونت معمولاً در بخش fonts تعریف می‌شود و نیاز به تکرار در assets ندارد)
+  # تعریف مسیر دارایی‌ها (Assets)
   assets:
     - assets/images/
     - assets/icons/
 
-  # تنظیم دقیق فونت‌های ایران‌یکان که در پوشه داری
+  # تنظیم فونت‌های ایران‌یکان
   fonts:
     - family: IranYekan
       fonts:
