--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,45 +1,33 @@
-name: taxi_app
-description: اپلیکیشن تاکسی اینترنتی مخصوص افغانستان - سفیر
+name: safir
+description: "Safir Taxi App Afghanistan"
 publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-
-  # آیکون‌ها و طراحی
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.9
-  
-  # مدیریت حالت (State Management)
   provider: ^6.1.1
-
-  # نقشه گوگل و مکان‌یابی (قلب تپنده سفیر)
   google_maps_flutter: ^2.5.3
   geolocator: ^10.1.0
   geocoding: ^2.1.1
   flutter_polyline_points: ^2.1.0
-
-  # ارتباطات و دیتابیس (بروزرسانی شده برای پروژه سفیر)
   http: ^1.2.1
   shared_preferences: ^2.2.3
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.0
   cloud_firestore: ^5.0.0
   firebase_storage: ^12.0.0
-
-  # ابزارهای کاربردی
   image_picker: ^1.1.2
   url_launcher: ^6.3.0
   intl: ^0.19.0
   path_provider: ^2.1.3
   form_field_validator: ^1.1.0
   animations: ^2.0.11
-
-  # پرداخت (اختیاری برای فازهای بعدی)
   flutter_stripe: ^10.1.1
 
 dev_dependencies:
@@ -49,17 +37,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-# بخش‌های زیر موقتاً غیرفعال شده تا برنامه بدون خطا اجرا شود
-#  assets:
-#    - assets/images/
-#    - assets/icons/
-
-#  fonts:
-#    - family: IranYekan
-#      fonts:
-#        - asset: assets/fonts/Qs_Iranyekan.ttf
-#        - asset: assets/fonts/Qs_Iranyekan_light.ttf
-#          weight: 300
-#        - asset: assets/fonts/Qs_Iranyekan_bold.ttf
-#          weight: 700
